# HCJC2

./: README  pyproject.toml
.github/workflows/: codeql.yml  docs.yml  eslint.yml
docs/: ARCHITECTURE-PRINCIPLES.md  MASTER-SPEC.md  MIGRATION-ACCEPTANCE.md  PRIVACY-INVARIANTS.md  PROJECT-CHARTER.md  QUALITY-GATES.md  TEST-STRATEGY.md  V1-DISPOSITION.md
docs/architecture/: SYSTEM-ARCHITECTURE.md
docs/correlations/: CORRELATION-SYSTEM.md  CORRELATIONS.md  LABELED-CORRELATION-FIXTURES.md
docs/data/: ARTIFACT-CLASSIFICATION-RETENTION.md  CANONICAL-PUBLIC-DATA-MODEL.md  DATA-AND-SCHEMAS.md  FEED-REGISTRY.md
docs/decisions/: ADR-001-NETLIFY.md  ADR-002-CORRELATION-ENGINE.md  ADR-003-OFFENSE-TAXONOMY.md  ADR-004-NETLIFY-AND-DATA-PUBLICATION.md  ADR-005-R2-WORKER-DATA-PLANE.md  ADR-006-CANONICAL-DATA-CONTRACTS.md
docs/governance/: PRIVACY-AND-LEGAL.md
docs/migration/: LEGACY-DOCUMENT-MAPPING.md  MIGRATION-AND-TRACEABILITY.md
docs/operations/: OPERATIONS-AND-SECURITY.md
docs/pipeline/: ACQUISITION-AND-PUBLICATION.md  PIPELINE-STATE-MACHINE.md  PUBLIC-DATA-PLANE.md
examples/: activity-events.example.json  artifact-manifest.example.json  correlation-fixture.example.json  map-feature-collection.example.json  offense-assessment.example.json  offense-observation.example.json  roster-snapshot.example.json  run-manifest.example.json  search-index.example.json
schemas/: activity-events.schema.json  common.schema.json  data-pointer.schema.json  map-feature-collection.schema.json  release-manifest.schema.json  roster-snapshot.schema.json  search-index.schema.json
(+62 files in other folders)
