[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hcjc2-docs-tools"
version = "0.1.0"
description = "Validation and traceability tooling for HCJC and HCJC2 controlled documentation"
requires-python = ">=3.13"
dependencies = ["PyYAML==6.0.2"]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "ruff==0.15.22"]

[project.scripts]
docsctl = "tools.docsctl.cli:main"

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
